// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runtime/types > IdentityProvider.d.ts.template > { authProviders: [ 'aad', 'github' ], customRoles: [] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa
type IdentityProvider =
  | 'aad'
  | 'github'
"
`;

exports[`runtime/types > IdentityProvider.d.ts.template > { authProviders: [ 'github', 'twitter', 'line' ], customRoles: [ 'administrator' ] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa
type IdentityProvider =
  | 'github'
  | 'twitter'
  | 'line'
"
`;

exports[`runtime/types > IdentityProvider.d.ts.template > { authProviders: [], customRoles: [] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa
type IdentityProvider =
"
`;

exports[`runtime/types > UserRole.d.ts.template > { authProviders: [ 'aad', 'github' ], customRoles: [] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa
type UserRole =
  | 'anonymous'
  | 'authenticated'

"
`;

exports[`runtime/types > UserRole.d.ts.template > { authProviders: [ 'github', 'twitter', 'line' ], customRoles: [ 'administrator' ] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa
type UserRole =
  | 'anonymous'
  | 'authenticated'
  | 'administrator'
"
`;

exports[`runtime/types > UserRole.d.ts.template > { authProviders: [], customRoles: [] } renders expected Type Definition 1`] = `
"// Generated by nuxt-swa
type UserRole =
  | 'anonymous'
  | 'authenticated'

"
`;
